# Simple_Crud

./: db.sqlite3  pyproject.toml
apps/accounts/: models.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_user_bio_alter_user_gender_alter_user_phone.py
apps/comments/: models.py  serializers.py
apps/comments/migrations/: 0001_initial.py
apps/posts/: apps.py  models.py  serializers.py
apps/posts/migrations/: 0001_initial.py
config/: settings.py  urls.py
